--- a/semana 4/Reproducible Pitch/p11.html
+++ b/semana 4/Reproducible Pitch/p11.html
@@ -53,7 +53,7 @@ code > span.in { color: #60a0b0; font-weight: bold; font-style: italic; } /* Inf
   <h1 class="title">Analysis of the mtcars Dataset</h1>
   <h1 class="subtitle">Variables and MPG</h1>
   <p class="author">
-Manas Tiwari
+Sergio Jr.
   </p>
   <p class="date">08.11.2020</p>
 </div>
