--- a/semana 4/Reproducible Pitch/p11.html
+++ b/semana 4/Reproducible Pitch/p11.html
@@ -61,7 +61,7 @@ Sergio Jr.
 <h2>Coursera Reproducible Pitch</h2>
 <h3 id="see-the-regression-models-course-project">See the Regression Models Course Project</h3>
 <ul>
-<li>URL: *<a href="https://github.com/sergio185/Developing-Data-Products/tree/master/semana%204/Reproducible%20Pitch*" class="uri">https://github.com/sergio185/Developing-Data-Products/tree/master/semana%204/Reproducible%20Pitch*</a></li>
+<li>URL: *<a href="https://github.com/sergio185/Developing-Data-Products/tree/master/semana%204/Reproducible%20Pitch" class="uri">https://github.com/sergio185/Developing-Data-Products/tree/master/semana%204/Reproducible%20Pitch</a></li>
 <li>Find here all the data that have been use for this presentation and also for the first part of the data Science Project: “First, you will create a Shiny application and deploy it on Rstudio’s servers.Second, you will use Slidify or Rstudio Presenter to prepare a reproducible pitch presentation about your application.”</li>
 </ul>
 <h3 id="find-all-details-here">Find all details here</h3>
